--- a/m-app/package.json
+++ b/m-app/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
-    "react-signature-canvas": "^1.1.0-alpha.1"
+    "react-signature-canvas": "^1.1.0-alpha.1",
+    "react-top-loading-bar": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
